Numeric presque ok.

--- a/A4-numeric.html
+++ b/A4-numeric.html
@@ -40,7 +40,7 @@
 <section class="ellipsis">
 	<h5 class="">Discrete Curvature</h5>
 	<table class="imgtable">
-	<tr>
+	<tr height="30%">
 		<td><img data-src="./img/eq/curvature_vertex.gif" width="100%"></td>
 		<td><img data-src="./img/eq/curvature_edge.gif" width="100%"></td>
 	</tr>
