--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 		<section data-external="2-creteil.html"> </section>
 		<section data-external="3-model_1.html"> </section>
 		<section data-external="4-model_2.html"> </section>
+		<section data-external="5-numeric.html"> </section>
 
 		<!-- APPENDIX -->
 		<section data-external="A1-creteil.html"> </section>
