--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 		<section data-external="3-model_1.html"> </section>
 		<section data-external="4-model_2.html"> </section>
 		<section data-external="5-numeric.html"> </section>
+		<section data-external="6-marsupilami.html"> </section>
 
 		<!-- APPENDIX -->
 		<section data-external="A1-creteil.html"> </section>
