Fin Prez avant compactage

--- a/3-model_1.html
+++ b/3-model_1.html
@@ -1,5 +1,5 @@
 <section class="plan center">
-	<h5>Design Process : issues and challenges</h5>
+	<h5>Beam model : variational approach</h5>
 	<ul>
 		<li>Introduction to the concept</li>
 		<li>Design process : overview</li>
@@ -8,7 +8,7 @@
 		<li>Beam model : equilibrium approach</li>
 		<li>New discrete beam element</li>
 		<hr>
-		<li>Implementation & Test case</li>
+		<li>Implementation & test case</li>
 	</ul>
 	<aside class="notes">
 		J'entre donc maintenant dans le second volet de ma présentation et je vais vous présenter une première approche pour contruire un modèle de poutre avec une cinématique plus riche que le modèle à 3 degrés de liberté employé à créteil.
